make stuff work from within jar